--- a/members/saleem_wastik.html
+++ b/members/saleem_wastik.html
@@ -76,22 +76,26 @@
                     </div>
                 </div>
 
-                <!-- UPI Payment Section -->
+                <!-- Payment Section -->
                 <div class="detail-section">
                     <h2 class="detail-heading">
-                        <img src="../images/basic/upi.webp" alt="UPI" class="upi-logo"> UPI
+                        <img src="../images/basic/support.webp" alt="UPI" class="upi-logo"> Support and Contribution
                     </h2>
                     <div class="payment-methods">
+                        <img src="../images/basic/upi.webp" alt="UPI" class="payment-logo">
                         <img src="../images/basic/gpay.svg" alt="GPay" class="payment-logo">
                         <img src="../images/basic/paytm.png" alt="Paytm" class="payment-logo">
                         <img src="../images/basic/phonepe.png" alt="PhonePe" class="payment-logo">
                     </div>
                     <div class="subheading-group">
-                        <p class="detail-subheading">UPI ID: john.doe@upi</p>
+                        <p class="detail-subheading">UPI Number: <strong>9318459436</strong></p>
+                        <p class="detail-subheading">UPI ID: <strong>saleem971666-1@oksbi</strong></p>
                     </div>
-                    <div class="qr-container">
-                        <img src="upi-qr.jpg" alt="UPI QR Code" class="qr-code">
-                        <p class="qr-note">Scan to pay via UPI</p>
+                    <div class="payment-methods">
+                        <img src="../images/basic/paypal.png" alt="Paypal" class="payment-logo">
+                    </div>
+                    <div class="subheading-group">
+                        <p class="detail-subheading">Paypal ID: <strong>Paypal/SaleemAhamad211</strong></p>
                     </div>
                 </div>
             </div>
