--- a/members/sample.html
+++ b/members/sample.html
@@ -82,6 +82,12 @@
                         <p class="detail-subheading">UPI Number: <strong>9318459436</strong></p>
                         <p class="detail-subheading">UPI ID: <strong>saleem971666-1@oksbi</strong></p>
                     </div>
+                    
+                    <div class="qr-container">
+                        <img src="upi-qr.jpg" alt="UPI QR Code" class="qr-code">
+                        <p class="qr-note">Scan to pay via UPI</p>
+                    </div>
+                    
                     <div class="payment-methods">
                         <img src="../images/basic/paypal.png" alt="Paypal" class="payment-logo">
                     </div>
