--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
                     </div>
                     </a>
 
-                    <div class="person">
-                        <img src="./images/Ahsan Open Mind/dp.img" alt="Ahsan Open Mind" class="person-image">
-                        <span class="person-name">Ahsan Open Mind</span>
-                    </div>
+                    <a href="./members/ahsan_open_mind.html" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                        <div class="person">
+                            <img src="./images/Ahsan Open Mind/dp.img" alt="Ahsan Open Mind" class="person-image">
+                            <span class="person-name">Ahsan Open Mind</span>
+                        </div>
+                    </a>
                     
                     <div class="person">
                         <img src="./images/ExMuslim Sameer/dp.jpg" alt="ExMuslim Sameer" class="person-image">
