--- a/members/ahsan_open_mind.html
+++ b/members/ahsan_open_mind.html
@@ -93,6 +93,7 @@
                         <img src="../images/basic/phonepe.png" alt="PhonePe" class="payment-logo">
                     </div>
                     <div class="subheading-group">
+                        <p class="detail-subheading">UPI Number: <strong>8882197091</strong></p>
                         <p class="detail-subheading">UPI Number: <strong>6005013756</strong></p>
                     </div>
                 </div>
