--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
                             <span class="person-name">Ahsan Open Mind</span>
                         </div>
                     </a>
-                    
-                    <div class="person">
-                        <img src="./images/ExMuslim Sameer/dp.jpg" alt="ExMuslim Sameer" class="person-image">
-                        <span class="person-name">ExMuslim Sameer</span>
-                    </div>
+
+                    <a href="./members/exmuslim_sameer.html" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                        <div class="person">
+                            <img src="./images/ExMuslim Sameer/dp.jpg" alt="ExMuslim Sameer" class="person-image">
+                            <span class="person-name">ExMuslim Sameer</span>
+                        </div>
+                    </a>
                     
                     <div class="person">
                         <img src="./images/ExMuslim Sahil/dp.jpeg" alt="ExMuslim Sahil" class="person-image">
