--- a/members/ahsan_open_mind.html
+++ b/members/ahsan_open_mind.html
@@ -92,9 +92,15 @@
                         <img src="../images/basic/paytm.png" alt="Paytm" class="payment-logo">
                         <img src="../images/basic/phonepe.png" alt="PhonePe" class="payment-logo">
                     </div>
+
                     <div class="subheading-group">
                         <p class="detail-subheading">UPI Number: <strong>8882197091</strong></p>
                         <p class="detail-subheading">UPI Number: <strong>6005013756</strong></p>
+                    </div>
+                    
+                    <div class="qr-container">
+                        <img src="../images/Ahsan Open Mind/qr.jpg" alt="UPI QR Code" class="qr-code">
+                        <p class="qr-note">Scan to pay via UPI</p>
                     </div>
                 </div>
             </div>
