--- a/members/ahsan_open_mind.html
+++ b/members/ahsan_open_mind.html
@@ -102,6 +102,12 @@
                         <img src="../images/Ahsan Open Mind/qr.jpg" alt="UPI QR Code" class="qr-code">
                         <p class="qr-note">Scan to pay via UPI</p>
                     </div>
+                    <br>
+                    <p class="detail-subheading">Account Number: <strong>43784247356</strong> </p>
+                    <p class="detail-subheading">IFSC Code: <strong>SBIN0002408</strong> </p>
+                    <p class="detail-subheading">BIC/Swift Code: <strong>SBININBB555</strong> </p>
+                    <p class="detail-subheading">Account Name: <strong>Ahsan</strong> </p>
+                    <p class="detail-subheading">Address: <strong>Ghaziabad</strong> </p>
                 </div>
             </div>
         </div>
