--- a/members/ahsan_open_mind.html
+++ b/members/ahsan_open_mind.html
@@ -103,6 +103,9 @@
                         <p class="qr-note">Scan to pay via UPI</p>
                     </div>
                     <br>
+                    <div class="payment-methods">
+                        <img src="../images/basic/bank.png" alt="Bank" class="payment-logo">
+                    </div>
                     <p class="detail-subheading">Account Number: <strong>43784247356</strong> </p>
                     <p class="detail-subheading">IFSC Code: <strong>SBIN0002408</strong> </p>
                     <p class="detail-subheading">BIC/Swift Code: <strong>SBININBB555</strong> </p>
