--- a/members/exmuslim_sameer.html
+++ b/members/exmuslim_sameer.html
@@ -138,12 +138,16 @@
                     <div class="subheading-group">
                         <p class="detail-subheading">UPI Number: <strong>9690939440</strong> [Sadakat Ali]</p>
                         <p class="detail-subheading">UPI ID: <strong>exmsameer@axl</strong> </p>
-                        <br>
-                        <p class="detail-subheading">Account Number: <strong>50200039840768</strong> </p>
-                        <p class="detail-subheading">IFSC Code: <strong>HDFC0000657</strong> </p>
-                        <p class="detail-subheading">Account Name: <strong>SADAKAT ALI</strong> </p>
-                        <p class="detail-subheading">Address: <strong>HARIDWAR UTTARAKHAND INDIA</strong> </p>
                     </div>
+                    
+                    <div class="payment-methods">
+                        <img src="../images/basic/bank.png" alt="Bank" class="payment-logo">
+                    </div>
+                    <p class="detail-subheading">Account Number: <strong>50200039840768</strong> </p>
+                    <p class="detail-subheading">IFSC Code: <strong>HDFC0000657</strong> </p>
+                    <p class="detail-subheading">Account Name: <strong>SADAKAT ALI</strong> </p>
+                    <p class="detail-subheading">Address: <strong>HARIDWAR UTTARAKHAND INDIA</strong> </p>
+                    
                     <div class="payment-methods">
                         <img src="../images/basic/paypal.png" alt="Paypal" class="payment-logo">
                     </div>
