--- a/members/exmuslim_sahil.html
+++ b/members/exmuslim_sahil.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ahsan Open Mind</title>
+    <title>Exmuslim Sahil</title>
     <link rel="stylesheet" href="../styles.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -14,9 +14,9 @@
             <!-- Person Image and Name -->
             <div class="person-header">
                 <div class="dp-circle">
-                    <img src="../images/Ahsan Open Mind/dp.img" alt="Ahsan Open Mind" class="person-main-image">
+                    <img src="../images/ExMuslim Sahil/dp.jpeg" alt="Exmuslim Sahil" class="person-main-image">
                 </div>
-                <h1 class="person-main-name">Ahsan Open Mind</h1>
+                <h1 class="person-main-name">Exmuslim Sahil</h1>
             </div>
             
             <div class="person-details">
