--- a/members/exmuslim_sahil.html
+++ b/members/exmuslim_sahil.html
@@ -27,13 +27,13 @@
                     </h2>
                     <div class="subheading-group">
                         <p class="detail-subheading">
-                            <a href="https://www.youtube.com/@Ahsanopenmind2" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
-                                Ahsan open mind 2
+                            <a href="https://www.youtube.com/@exmuslimsahilUncensored" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                                Exmuslim Sahil Uncensored
                             </a>
                         </p>
                         <p class="detail-subheading">
-                            <a href="https://www.youtube.com/@AhsanOpenreaction" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
-                                Ahsan Open Reaction
+                            <a href="https://www.youtube.com/@ExMuslimSahil" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                                ExMuslim Sahil Official
                             </a>
                         </p>
                     </div>
@@ -111,6 +111,16 @@
                     <p class="detail-subheading">BIC/Swift Code: <strong>SBININBB555</strong> </p>
                     <p class="detail-subheading">Account Name: <strong>Ahsan</strong> </p>
                     <p class="detail-subheading">Address: <strong>Ghaziabad</strong> </p>
+                    
+                    <div class="payment-methods">
+                        <img src="../images/basic/paypal.png" alt="Paypal" class="payment-logo">
+                    </div>
+
+                    <a href="paypal.me/exmuslimsahil" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;"></a>
+                    <div class="subheading-group">
+                        <p class="detail-subheading">Paypal ID: <strong>Paypal/exmuslimsahil</strong></p>
+                    </div>
+                    </a>
                 </div>
             </div>
         </div>
