--- a/members/exmuslim_sahil.html
+++ b/members/exmuslim_sahil.html
@@ -46,8 +46,34 @@
                     </h2>
                     <div class="subheading-group">
                         <p class="detail-subheading">
-                            <a href="https://www.instagram.com/ahsanopenmind/" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
-                                Ahsan open mind
+                            <a href="https://www.instagram.com/exmuslim_sahilofficial/" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                                ex muslim sahil
+                            </a>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="detail-section">
+                    <h2 class="detail-heading">
+                        <i class="fab fa-whatsapp heading-icon"></i> Whatsapp
+                    </h2>
+                    <div class="subheading-group">
+                        <p class="detail-subheading">
+                            <a href="https://www.whatsapp.com/channel/0029VajLy2D4SpkDImw3xw0Z" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                                Exmuslim Sahil Official WhatsApp Channel
+                            </a>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="detail-section">
+                    <h2 class="detail-heading">
+                        <i class="fab fa-patreon heading-icon"></i> Patreon
+                    </h2>
+                    <div class="subheading-group">
+                        <p class="detail-subheading">
+                            <a href="https://www.patreon.com/IndianExMuslimSahil" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                                Indian ExMuslim Sahil
                             </a>
                         </p>
                     </div>
