--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </div>
                     </a>
                     
-                    <a href="./members/exmuslim_sahil.html" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                    <a href="./members/adam_seeker.html" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
                         <div class="person">
                             <img src="./images/Adam Seeker/dp.jpg" alt="Adam Seeker" class="person-image">
                             <span class="person-name">Adam Seeker</span>
