--- a/members/adam_seeker.html
+++ b/members/adam_seeker.html
@@ -71,9 +71,13 @@
                     <h2 class="detail-heading">
                         <i class="fas fa-globe heading-icon"></i> Website: Adam Seeker of Truth
                     </h2>
-                    <div class="subheading-group">
-                        <p class="detail-subheading">adamseekeroftruth.com</p>
-                    </div>
+                        <div class="subheading-group">
+                            <p class="detail-subheading">
+                                <a href="http://www.adamseekeroftruth.com" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                                    adamseekeroftruth.com
+                                </a>
+                            </p>
+                        </div>
                 </div>
                 
                 <!-- Social Media Section -->
@@ -101,34 +105,6 @@
                             </a>
                         </p>
                     </div>
-                </div>
-
-                <!-- Payment Section -->
-                <br><hr>
-                <div class="detail-section">
-                    <h2 class="detail-heading">
-                        <img src="../images/basic/support.webp" alt="UPI" class="upi-logo"> Support and Contribution
-                    </h2>
-                    <div class="payment-methods">
-                        <img src="../images/basic/upi.webp" alt="UPI" class="payment-logo">
-                        <img src="../images/basic/gpay.svg" alt="GPay" class="payment-logo">
-                        <img src="../images/basic/paytm.png" alt="Paytm" class="payment-logo">
-                        <img src="../images/basic/phonepe.png" alt="PhonePe" class="payment-logo">
-                    </div>
-
-                    <div class="subheading-group">
-                        <p class="detail-subheading">UPI Number: <strong>8655181026</strong></p>
-                    </div>
-                    
-                    <div class="payment-methods">
-                        <img src="../images/basic/paypal.png" alt="Paypal" class="payment-logo">
-                    </div>
-
-                    <a href="paypal.me/exmuslimsahil" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;"></a>
-                    <div class="subheading-group">
-                        <p class="detail-subheading">Paypal ID: <strong>Paypal/exmuslimsahil</strong></p>
-                    </div>
-                    </a>
                 </div>
             </div>
         </div>
