--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
                             <span class="person-name">Adam Seeker</span>
                         </div>
                     </a>
+                    
+                    <a href="./members/exmuslim_abdullah.html" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                        <div class="person">
+                            <img src="./images/ExMuslim Abdullah/dp.jpg" alt="ExMuslim Abdullah" class="person-image">
+                            <span class="person-name">ExMuslim Abdullah</span>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
