--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         </div>
                     </a>
                     
-                    <a href="./members/exmuslim_abdullah.html" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                    <a href="./members/imroz_alam.html" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
                         <div class="person">
                             <img src="./images/Imroz Alam/dp.jpg" alt="Imroz Alam" class="person-image">
                             <span class="person-name">Imroz Alam</span>
