--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
                             <span class="person-name">Imroz Alam</span>
                         </div>
                     </a>
+                    
+                    <a href="./members/exmuslim_areesha_babar.html" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                        <div class="person">
+                            <img src="./images/ExMuslim Areesha Babar/dp.jpg" alt="Imroz Alam" class="person-image">
+                            <span class="person-name">ExMuslim Areesha Babar</span>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
