--- a/members/exmuslim_areesha_babar.html
+++ b/members/exmuslim_areesha_babar.html
@@ -86,8 +86,8 @@
                     </h2>
                     <div class="subheading-group">
                         <p class="detail-subheading">
-                            <a href="https://www.instagram.com/alamimroz5/" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
-                                Imroz Alam
+                            <a href="https://www.instagram.com/dr_areesha_babar/" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                                Dr Areesha Babar
                             </a>
                         </p>
                     </div>
