--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                         </div>
                     </a>
                     
-                    <a href="./members/exmuslim_areesha_babar.html" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                    <a href="./members/rabbani_exMuslim.html" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
                         <div class="person">
-                            <img src="./images/Rabbani ExMuslim/dp.jpg" alt="Imroz Alam" class="person-image">
-                            <span class="person-name">ExMuslim Areesha Babar</span>
+                            <img src="./images/Rabbani ExMuslim/dp.jpg" alt="Rabbani ExMuslim" class="person-image">
+                            <span class="person-name">Rabbani ExMuslim</span>
                         </div>
                     </a>
                 </div>
