--- a/members/adam_seeker.html
+++ b/members/adam_seeker.html
@@ -73,8 +73,8 @@
                     </h2>
                     <div class="subheading-group">
                         <p class="detail-subheading">
-                            <a href="https://discord.gg/p2TwEjNSR7" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
-                                Discord Server
+                            <a href="https://discord.com/invite/wg44S4HyuV" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                                Adam Seeker Discord Server
                             </a>
                         </p>
                     </div>
