--- a/members/exmuslim_sameer.html
+++ b/members/exmuslim_sameer.html
@@ -158,7 +158,7 @@
                         <img src="../images/basic/paypal.png" alt="Paypal" class="payment-logo">
                     </div>
 
-                    <a href="https://paypal.me/exmsameer" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;"></a>
+                    <a href="https://paypal.me/exmsameer" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
                     <div class="subheading-group">
                         <p class="detail-subheading">Paypal ID: <strong>Paypal/exmsameer</strong></p>
                     </div>
