--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
                             <span class="person-name">Rabbani ExMuslim</span>
                         </div>
                     </a>
+                    
+                    <a href="./members/exmuslim_angel.html" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                        <div class="person">
+                            <img src="./images/ExMuslim Angel/dp.jpg" alt="ExMuslim Angel" class="person-image">
+                            <span class="person-name">ExMuslim Angel</span>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
