--- a/members/exmuslim_angel.html
+++ b/members/exmuslim_angel.html
@@ -43,7 +43,7 @@
                     <div class="subheading-group">
                         <p class="detail-subheading">
                             <a href="https://www.patreon.com/ExMuslimAngel/" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
-                                Adam
+                                Ex Muslim Angel
                             </a>
                         </p>
                     </div>
