--- a/members/saleem_wastik.html
+++ b/members/saleem_wastik.html
@@ -101,9 +101,12 @@
                     <div class="payment-methods">
                         <img src="../images/basic/paypal.png" alt="Paypal" class="payment-logo">
                     </div>
+
+                    <a href="https://paypal.me/exmsameer" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
                     <div class="subheading-group">
                         <p class="detail-subheading">Paypal ID: <strong>Paypal/SaleemAhamad211</strong></p>
                     </div>
+                    </a>
                 </div>
             </div>
         </div>
