--- a/members/saleem_wastik.html
+++ b/members/saleem_wastik.html
@@ -102,9 +102,9 @@
                         <img src="../images/basic/paypal.png" alt="Paypal" class="payment-logo">
                     </div>
 
-                    <a href="https://paypal.me/exmsameer" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
+                    <a href="https://paypal.me/SaleemAhamad211" target="_blank" rel="noopener noreferrer" style="color: #4299e1; text-decoration: none; font-weight: 600; transition: color 0.2s ease-in-out;">
                     <div class="subheading-group">
-                        <p class="detail-subheading">Paypal ID: <strong>Paypal/SaleemAhamad211</strong></p>
+                        <p class="detail-subheading">Paypal ID: Paypal/SaleemAhamad211</p>
                     </div>
                     </a>
                 </div>
